# minis

./: .gitignore
chimere_multiline_shebang/: v01_simple.c  v02_advanced.c  v03_more_advanced.c
mini_cpu/: mini_cpu.c
mini_sh/: CMakeLists.txt  main.cpp
mini_vm/: vm.asm  vm.cpp  vm_base.asm  vm_comp.cpp  vm_v2.cpp
playground/: HalloWorld.c  self_linking.c  self_linking_as_zip.c
